--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ REACT_APP_FIREBASE_PROJECT_ID=neuronet-35d6e
 REACT_APP_FIREBASE_STORAGE_BUCKET=neuronet-35d6e.firebasestorage.app
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=571998141302
 REACT_APP_FIREBASE_APP_ID=1:571998141302:web:00bfdc3bd053276cb9d857
+
+# Google API Configuration
+REACT_APP_GOOGLE_API_PATH=your_google_api_path_here
+REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyCPgli9sOlCQ0HB7vTcMkMaAYVQ_6J6BMo
