--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@firebase/auth": "^1.10.0",
     "@firebase/firestore": "^4.7.10",
     "@firebase/storage": "^0.13.7",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-google-maps/api": "^2.20.6",
     "@types/google.maps": "^3.58.1",
     "autoprefixer": "^10.4.21",
