--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,8 @@
   ],
   "buildCommand": "npm run build",
   "outputDirectory": "build",
-  "framework": "create-react-app"
+  "framework": "create-react-app",
+  "github": {
+    "silent": true
+  }
 }
