--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,13 @@
   },
   "headers": [
     {
+      "source": "/manifest.json",
+      "headers": [
+        { "key": "Content-Type", "value": "application/json" },
+        { "key": "Access-Control-Allow-Origin", "value": "*" }
+      ]
+    },
+    {
       "source": "/(.*)",
       "headers": [
         { "key": "Cache-Control", "value": "s-maxage=1, stale-while-revalidate" }
