feat: Update Firebase and Google Maps configurations, enhance error handling, and improve component structure

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,9 @@
-# Firebase Configuration
-# Replace these values with your Firebase project configuration
-REACT_APP_FIREBASE_API_KEY=your-api-key
-REACT_APP_FIREBASE_AUTH_DOMAIN=your-project-id.firebaseapp.com
-REACT_APP_FIREBASE_PROJECT_ID=your-project-id
-REACT_APP_FIREBASE_STORAGE_BUCKET=your-project-id.appspot.com
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=your-messaging-sender-id
-REACT_APP_FIREBASE_APP_ID=your-app-id
+REACT_APP_FIREBASE_API_KEY=AIzaSyBe3EyNmnqBkwu3j7k92Z0I8WcRuscCHbo
+REACT_APP_FIREBASE_AUTH_DOMAIN=ev-charging-app-f8464.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=ev-charging-app-f8464
+REACT_APP_FIREBASE_STORAGE_BUCKET=ev-charging-app-f8464.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=230456789012
+REACT_APP_FIREBASE_APP_ID=1:230456789012:web:5e12afd56789a0bc1def34
 
-# Note: Create a .env file with your actual Firebase configuration values
-# Do not commit the .env file to version control
+# Add a dummy Maps API key until you enable billing
+REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyBe3EyNmnqBkwu3j7k92Z0I8WcRuscCHbo
