--- a/.env
+++ b/.env
@@ -5,7 +5,5 @@ REACT_APP_FIREBASE_PROJECT_ID=sample-firbase-ai-app-c1fc3
 REACT_APP_FIREBASE_STORAGE_BUCKET=sample-firbase-ai-app-c1fc3.firebasestorage.app
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=251353888761
 REACT_APP_FIREBASE_APP_ID=1:251353888761:web:d861ad2ae68751c695ef28
-
-# Google API Configuration
-REACT_APP_GOOGLE_API_PATH=your_google_api_path_here
-REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyCPgli9sOlCQ0HB7vTcMkMaAYVQ_6J6BMo
+# Google Maps API Key (keeping the existing one)
+REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyBe3EyNmnqBkwu3j7k92Z0I8WcRuscCHbo
