--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "autoprefixer": "^10.4.21",
     "cra-template-pwa-typescript": "2.0.0",
     "firebase": "^11.6.0",
+    "mapbox-gl": "^3.11.1",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-map-gl": "^8.0.4",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^4.1.3",
