--- a/package.json
+++ b/package.json
@@ -35,14 +35,19 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-google-maps/api": "^2.20.6",
+    "@tabler/icons-react": "^3.31.0",
     "@types/google.maps": "^3.58.1",
     "autoprefixer": "^10.4.21",
+    "clsx": "^2.1.1",
     "cra-template-pwa-typescript": "2.0.0",
     "firebase": "^11.6.0",
     "mapbox-gl": "^2.15.0",
+    "motion": "^12.9.2",
+    "react-icons": "^5.5.0",
     "react-map-gl": "^7.1.6",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
     "workbox-core": "^7.3.0",
     "workbox-expiration": "^7.3.0",
