--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
     "cra-template-pwa-typescript": "2.0.0",
-    "firebase": "^11.6.0",
+    "dotenv": "^16.5.0",
+    "firebase": "^11.6.1",
     "mapbox-gl": "^2.15.0",
     "motion": "^12.9.2",
     "react-icons": "^5.5.0",
