feat: Integrate AI Assistant with OpenAI and Google Generative AI
- Added OpenAI and Google Generative AI dependencies to package.json.
- Implemented AI Assistant chat functionality in HomePage.js with a floating action button.
- Created AiAssistantChat component for managing chat interactions and responses.
- Styled the AI chat window and floating action button with CSS.
- Implemented chat message handling and typing indicators in AiAssistantChat.js.
- Added error handling for API responses in both OpenAI and Gemini services.
- Updated geolocation handling in HomePage.js to fallback to a default city if location retrieval fails.

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ REACT_APP_FIREBASE_APP_ID=1:230456789012:web:5e12afd56789a0bc1def34
 
 # Add a dummy Maps API key until you enable billing
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyBe3EyNmnqBkwu3j7k92Z0I8WcRuscCHbo
+REACT_APP_GEMINI_API_KEY=AIzaSyCp22t7UqITBdJDRCkpWZwa6n5F1SaU8Gg
