--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@google/generative-ai": "^0.24.1",
     "@react-google-maps/api": "^2.20.6",
     "@tabler/icons-react": "^3.31.0",
     "@types/google.maps": "^3.58.1",
@@ -44,6 +45,7 @@
     "firebase": "^11.6.1",
     "mapbox-gl": "^2.15.0",
     "motion": "^12.9.2",
+    "openai": "^4.98.0",
     "react-icons": "^5.5.0",
     "react-map-gl": "^7.1.6",
     "react-router-dom": "^7.5.0",
