feat: Enhance Firebase hosting configuration and update authentication flow
- Added Firebase hosting configuration with custom headers for Cross-Origin-Opener-Policy.
- Introduced a new route for changing vehicles, protected by authentication.
- Updated the login redirection logic to ensure users are directed to the driver dashboard.
- Refined the authentication state management to improve loading states and error handling.

--- a/firebase.json
+++ b/firebase.json
@@ -11,5 +11,24 @@
         "*.local"
       ]
     }
-  ]
+  ],
+  "hosting": {
+    "public": "build",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "headers": [
+      {
+        "source": "**",
+        "headers": [
+          {
+            "key": "Cross-Origin-Opener-Policy",
+            "value": "same-origin-allow-popups"
+          }
+        ]
+      }
+    ]
+  }
 }
