--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@react-google-maps/api": "^2.20.6",
     "@tabler/icons-react": "^3.31.0",
     "@types/google.maps": "^3.58.1",
+    "@types/supercluster": "^7.1.3",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
     "cra-template-pwa-typescript": "2.0.0",
@@ -51,6 +52,7 @@
     "react-map-gl": "^7.1.6",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
+    "supercluster": "^8.0.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
     "workbox-core": "^7.3.0",
