--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "motion": "^12.9.2",
     "nodemailer": "^7.0.3",
     "openai": "^4.98.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-map-gl": "^7.1.6",
     "react-router-dom": "^7.5.0",
