--- a/package.json
+++ b/package.json
@@ -61,5 +61,8 @@
     "workbox-precaching": "^7.3.0",
     "workbox-routing": "^7.3.0",
     "workbox-strategies": "^7.3.0"
+  },
+  "devDependencies": {
+    "sharp": "^0.34.2"
   }
 }
