--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "react-icons": "^5.5.0",
     "react-map-gl": "^7.1.6",
     "react-router-dom": "^7.5.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "supercluster": "^8.0.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
@@ -60,5 +60,15 @@
     "workbox-precaching": "^7.3.0",
     "workbox-routing": "^7.3.0",
     "workbox-strategies": "^7.3.0"
+  },
+  "devDependencies": {
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^29.5.14",
+    "@types/react": "^19.1.5",
+    "@types/react-dom": "^19.1.5",
+    "@types/testing-library__react": "^10.0.1",
+    "cross-env": "^7.0.3",
+    "jest": "^27.5.1",
+    "ts-jest": "^29.3.4"
   }
 }
